# Spotify_Exploration

./: .cache-  .env.example  .gitignore  CLAUDE.md  README.md  Spotify.html  Spotify.ipynb  app.py  architecture.mmd  main.py  pyproject.toml
.ipynb_checkpoints/: Spotify-checkpoint.ipynb
pages/: 1_Top_Charts.py  2_Audio_Features.py  3_Listening_Patterns.py  4_Playlist_Analysis.py
